# Vehicle-Price-Prediction

./: .gitignore  Complete_ML_Pipeline.ipynb  Dockerfile  Dockerfile.streamlit  GETTING_STARTED.md  Makefile  README.md  START_HERE.md  __init__.py  api_app.py  benchmark.py  config.py  deploy.bat  docker-compose.yml  evaluate.py  exceptions.py  logger.py  monitoring.py  nginx.conf  performance_test.py  predict.py  pyproject.toml  requirements.txt  start_app.bat  streamlit_app.py  test_api.py  train.py  utils.py  vehicle_prediction_deployment.ipynb
config/: .env.example  .flake8  .pre-commit-config.yaml
data/: dataloader.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  PROJECT_STRUCTURE.md  Presentation.md  QUICKSTART.md  SECURITY.md  TRANSFORMATION_SUMMARY.md
frontend/: index.html  scripts.js  styles.css
models/: best_model.pkl
outputs/: data_summary.txt  enhanced_test_metrics.json  feature_importance.csv  metrics.json  preprocessor.joblib  training_log.json
scripts/: deploy.sh  setup.bat  setup.ps1  setup_unix.sh
tests/: __init__.py  conftest.py  test_dataloader.py  test_evaluate.py  test_predict.py  test_train.py
